--- a/index.html
+++ b/index.html
@@ -3,32 +3,54 @@
   <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
+    <style type="text/css">
+      a {
+        color: red;
+      }
+      .azure {
+        background-color: azure;
+      }
+      .bio-box {
+        border: 1px solid black;
+      }
+      .bio-box a {
+        color: green;
+      }
+      #exec-bio {
+        background-color: lightgray;
+      }
+      #orange-back {
+        background-color: orange;
+        border: 1px solid red;
+      }
+    </style>
   </head>
+
   <body>
     <h1>I'm an h1</h1>
     <ul>
-      <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
+      <li id="orange-back">
+        <a href="https://example.com/">Link</a>
       </li>
       <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
+        <a href="https://example.com/">Link</a>
       </li>
       <li>
-        <a href="https://example.com/" style="color: red;">Link</a>
+        <a href="https://example.com/">Link</a>
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+    <div id="exec-bio" class="bio-box">
+      <a href="https://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box azure">
+      <a href="https://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box">
+      <a href="https://example.com/">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
-      <a href="https://example.com/" style="color: green;">I'm a link</a>
+    <div class="bio-box">
+      <a href="https://example.com/">I'm a link</a>
     </div>
   </body>
 </html>
