--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
       /* GLOBAL STYLES */
       a {
-        color: #d3869b;
-      }
-      h2 {
-        font-size: 30px;
+        color: #blue;
       }
       html, body {
         margin: 0;
@@ -25,30 +22,59 @@
       .full-hero {
         background-color: #c7dbfc;
         height: 50vw;
-        width: 50vw;
       }
 
       /* SOCIAL STYLES */
       .social-link {
-        color: #458588;
+        color: #blue;
         background: rgba(150, 150, 150, 0.5);
+        display: inline-block;
+        height: 36px;
+      }
+      .social-list {
+        list-style: none;
+        padding: 0;
+        text-align: center;
+      }
+      .social-list > li {
+        display: inline-block;
       }
 
       /* BIO STYLES */
       .bio-wrapper {
         font-size: 24px;
+        margin: auto;
+        max-width: 960px;
+        overflow: hidden;
+      }
+      .bio-wrapper:after {
+        visibility: hidden;
+        display: block;
+        font-size: 0;
+        content: " ";
+        clear: both;
+        height: 0;
       }
       .bio-box {
         border: 1px solid #1d2021;
+        box-sizing: border-box;
+        float: left;
         font-size: 1rem;
-        width: 50%;
+        margin: 40px 1% 0;
+        padding: 2%;
+        width: 23%;
+      }
+      .bio-box > a {
+        color: #c68bf9;
       }
       .bio-box h3 {
-        font-size: 1em;
+        font-size: 1.5em;
       }
       .bio-copy {
-        color: #689d6a;
         font-size: 1em;
+      }
+      .bio-copy a {
+        color: #689d6a;
       }
 
     </style>
@@ -57,15 +83,15 @@
   <body>
     <div class="full-hero hero-home">
       <h1>I'm an h1</h1>
-        <ul>
+        <ul class="social-list">
           <li>
-            <a href="https://example.com/" class="social-link">Link</a>
+            <a href="https://example.com/" class="social-link">Link1</a>
           </li>
           <li>
-            <a href="https://example.com/" class="social-link">Link</a>
+            <a href="https://example.com/" class="social-link">Link2</a>
           </li>
           <li>
-            <a href="https://example.com/" class="social-link">Link</a>
+            <a href="https://example.com/" class="social-link">Link3</a>
           </li>
         </ul>
     </div>
@@ -125,5 +151,32 @@
     </div>
     </div>
   </div>
+  <p>
+    Learn Enough to Be Dangerous is a leader in the movement to teach the
+    world <em>technical sophistication</em>, which includes both "hard
+    skills" like coding, command lines, and version control, and "soft
+     skills" like guessing keyboard shortcuts, Googling error messages, and
+    knowing when to just reboot the darn thing.
+  </p>
+  <p>
+    We believe there are <strong>at least a billion people</strong> who can
+    benefit from learning technical sophistication, probably more. To join
+    our movement,
+    <a href="https://learnenough.com/#email_list">sign up for our official
+    email list</a> now.
+  </p>
+  <h3>Background</h3>
+  <p>
+    Learn Enough to Be Dangerous is an outgrowth of the
+    <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and the
+    <a href="https://www.softcover.io/">Softcover publishing platform</a>.
+    This page is part of the sample site for
+    <a href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and
+    Layout to Be Dangerous</em></a>, which teaches the basics of
+    <strong>C</strong>ascading <strong>S</strong>tyle
+    <strong>S</strong>heets, the language that allows web pages to be styled.
+    Other related tutorials can be found at
+    <a href="https://learnenough.com/">learnenough.com</a>.
+  </p>
   </body>
 </html>
