changes to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
       /* GLOBAL STYLES */
       a {
-        color: #blue;
+        color: #f00;
       }
       html, body {
         margin: 0;
@@ -21,15 +21,26 @@
       /* HERO STYLES */
       .full-hero {
         background-color: #c7dbfc;
-        height: 50vw;
+        height: 50vh;
       }
 
       /* SOCIAL STYLES */
       .social-link {
-        color: #blue;
         background: rgba(150, 150, 150, 0.5);
+        border-radius: 99px;
+        box-sizing: border-box;
+        color: #fff;
         display: inline-block;
-        height: 36px;
+        font-family: helvetica, arial, sans;
+        font-size: 1rem;
+        font-weight: bold;
+        height: 2.5em;
+        line-height: 1;
+        padding-top: 0.85em;
+        text-align: center;
+        text-decoration: none;
+        vertical-align: middle;
+        width: 2.5em;
       }
       .social-list {
         list-style: none;
@@ -38,6 +49,7 @@
       }
       .social-list > li {
         display: inline-block;
+        margin: 0 0.5em;
       }
 
       /* BIO STYLES */
@@ -56,25 +68,30 @@
         height: 0;
       }
       .bio-box {
-        border: 1px solid #1d2021;
+        border: 1px solid black;
+        border-color: black black red;
         box-sizing: border-box;
         float: left;
         font-size: 1rem;
         margin: 40px 1% 0;
-        padding: 2%;
+        padding: 0 2% 2%;
         width: 23%;
       }
-      .bio-box > a {
-        color: #c68bf9;
-      }
       .bio-box h3 {
+        color: #fff;
         font-size: 1.5em;
+        margin: -40px 0 1em;
+        text-align: center;
+      }
+      .bio-box img {
+        width: 100%;
       }
       .bio-copy {
         font-size: 1em;
+        line-height: 1.5;
       }
       .bio-copy a {
-        color: #689d6a;
+        color: green;
       }
 
     </style>
@@ -85,13 +102,13 @@
       <h1>I'm an h1</h1>
         <ul class="social-list">
           <li>
-            <a href="https://example.com/" class="social-link">Link1</a>
+            <a href="https://example.com/" class="social-link">Fb</a>
           </li>
           <li>
-            <a href="https://example.com/" class="social-link">Link2</a>
+            <a href="https://example.com/" class="social-link">Tw</a>
           </li>
           <li>
-            <a href="https://example.com/" class="social-link">Link3</a>
+            <a href="https://example.com/" class="social-link">Gh</a>
           </li>
         </ul>
     </div>
@@ -100,8 +117,9 @@
 
     <div class="bio-wrapper">
     <div class="bio-box">
+      <img src="https://placekitten.com/g/400/400">
       <h3>Michael Hartl</h3>
-      <a href="https://twitter.com/mhartl" class="social-link">here</a>
+      <a href="https://twitter.com/mhartl" class="social-link">Tw</a>
       <div class="bio-copy">
       <p>
         Known for his dazzling charm, rapier wit, and unrivaled humility,
@@ -119,8 +137,9 @@
       </div>
     </div>
     <div class="bio-box">
+      <img src="https://placekitten.com/g/400/400">
       <h3>Lee Donahoe</h3>
-      <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
+      <a href="https://twitter.com/leedonahoe" class="social-link">Tw</a>
       <div class="bio-copy">
       <p>
         When he's not literally swimming with sharks or hunting powder stashes on
@@ -131,8 +150,9 @@
       </div>
     </div>
     <div class="bio-box">
+      <img src="https://placekitten.com/g/400/400">
       <h3>Nick Merwin</h3>
-      <a href="https://twitter.com/nickmerwin" class="social-link">here</a>
+      <a href="https://twitter.com/nickmerwin" class="social-link">Tw</a>
       <div class="bio-copy">
       <p>
         You may have seen him shredding guitar live with Capital Cities on Jimmy
@@ -143,6 +163,7 @@
       </div>
     </div>
     <div class="bio-box">
+      <img src="https://placekitten.com/g/400/400">
       <h3>??</h3>
       <div class="bio-copy">
       <p>
